--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="testimonial-container">
+<div class="testimonial">
+<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+<p class="author">- John Doe</p>
+</div>
+<div class="testimonial">
+<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+<p class="author">- Jane Doe</p>
+</div>
+</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
