--- a/main.html
+++ b/main.html
@@ -10,11 +10,11 @@
 	<!-- the entire body must be written by student -->
 	<div class="testimonial-container">
 <div class="testimonial">
-<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+<p class="text">This product is amazing! I highly recommend it to anyone in need of a solution like this</p>
 <p class="author">- John Doe</p>
 </div>
 <div class="testimonial">
-<p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+<p class="text">I have been using  this for a few weeks now and it has completely transformed my workflow</p>
 <p class="author">- Jane Doe</p>
 </div>
 </div>
